# subaru2caom2

./: Dockerfile  README.md  setup.cfg  setup.py
blank2caom2/: main_app.py
blank2caom2/tests/: test_composable.py
scripts/: config.yml  docker-entrypoint.sh  subaru_run.sh  subaru_run_remote.sh  subaru_run_state.sh
subaru2caom2/: __init__.py  cleanup_augmentation.py  composable.py  fits2caom2_augmentation.py  main_app.py  preview_augmentation.py  transfer.py
subaru2caom2/tests/: test_cleanup_augmentation.py  test_composable.py  test_main_app.py  test_preview_augmentation.py  test_storage_name.py
subaru2caom2/tests/data/: SCLA.134.129.W-J-VR.weight.fits.fz.header  SCLA.134.129.expected.xml  SCLA.258.182.W-J-B.fits.header  SCLA.258.182.expected.xml  SCLA.285.288.N-B-L921.fits.header  SCLA.285.288.N-B-L921.weight.fits.fz.header  SCLA.285.288.W-J-V.fits.header  SCLA.285.288.W-J-V.weight.fits.fz.header  SCLA.285.288.W-S-G+.fits.header  SCLA.285.288.W-S-G+.weight.fits.fz.header  SCLA.285.288.W-S-I+.fits.header  SCLA.285.288.W-S-I+.weight.fits.fz.header  SCLA.285.288.W-S-R+.fits.header  SCLA.285.288.W-S-R+.weight.fits.fz.header  SCLA.285.288.W-S-Z+.fits.header  SCLA.285.288.W-S-Z+.weight.fits.fz.header  SCLA.285.288.expected.xml  SCLA.396.170.W-C-RC.fits.header  SCLA.396.170.W-C-RC.weight.fits.fz.header  SCLA.396.170.expected.xml  SCLA.636.200.W-A-Y.fits.header  SCLA.636.200.expected.xml  SCLA.652.157.W-C-RC.fits.header  SCLA.652.157.W-J-VR.fits.header  SCLA.652.157.W-J-VR.weight.fits.fz.header  SCLA.652.157.expected.xml  SCLA_189.232+62.201.W-C-IC.fits.header  (+17 more)
(+52 files in other folders)
