[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = subaru2caom2

[bdist_wheel]
universal=1

[metadata]
package_name = subaru2caom2
description = Starting point for application to generate CAOM2 observations.
long_description = TBD 
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = opencadc/subaru2caom2
install_requires = caom2utils caom2repo cadcdata vos
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.2.0

[entry_points]
subaru_run = subaru2caom2.composable:run
subaru_run_remote = subaru2caom2.composable:run_remote
subaru_run_by_state = subaru2caom2.composable:run_by_state
